--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,6 @@
 {
   "tasks": {
-    "dev": "deno run --allow-net --allow-read jsr:@std/http/file-server"
-  },
-  "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "serve": "deno run --allow-net --allow-read jsr:@std/http/file-server .",
+    "dev": "deno run --allow-net --allow-read --watch jsr:@std/http/file-server ."
   }
 }
